syntax = "proto3";
package example.blog.blog;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "blog/infor.proto";

option go_package = "github.com/example/blog/x/blog/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2
	rpc Infor(QueryGetInforRequest) returns (QueryGetInforResponse) {
		option (google.api.http).get = "/example/blog/blog/infor/{id}";
	}
	rpc InforAll(QueryAllInforRequest) returns (QueryAllInforResponse) {
		option (google.api.http).get = "/example/blog/blog/infor";
	}

}

// this line is used by starport scaffolding # 3
message QueryGetInforRequest {
	uint64 id = 1;
}

message QueryGetInforResponse {
	Infor Infor = 1;
}

message QueryAllInforRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllInforResponse {
	repeated Infor Infor = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
